--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
             <version>2.5</version>
             <scope>provided</scope>
         </dependency>
+
+             This is sample webhook job 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
